--- a/week1/day4.ipynb
+++ b/week1/day4.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "id": "7dc1c1d9",
    "metadata": {},
    "outputs": [],
@@ -21,22 +21,37 @@
     "\n",
     "encoding = tiktoken.encoding_for_model(\"gpt-4.1-mini\")\n",
     "\n",
-    "tokens = encoding.encode(\"Hi my name is Ed and I like banoffee pie\")"
+    "tokens = encoding.encode(\"Hi my name is Amos and I would like 1 marvelous Nasi Lemak\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "id": "7632966c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[12194, 922, 1308, 382, 6117, 326, 357, 1299, 9171, 26458, 5148]"
+       "[12194,\n",
+       " 922,\n",
+       " 1308,\n",
+       " 382,\n",
+       " 174852,\n",
+       " 326,\n",
+       " 357,\n",
+       " 1481,\n",
+       " 1299,\n",
+       " 220,\n",
+       " 16,\n",
+       " 105942,\n",
+       " 478,\n",
+       " 4402,\n",
+       " 64487,\n",
+       " 422]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "id": "cce0c188",
    "metadata": {},
    "outputs": [
@@ -59,13 +74,18 @@
       "922 =  my\n",
       "1308 =  name\n",
       "382 =  is\n",
-      "6117 =  Ed\n",
+      "174852 =  Amos\n",
       "326 =  and\n",
       "357 =  I\n",
+      "1481 =  would\n",
       "1299 =  like\n",
-      "9171 =  ban\n",
-      "26458 = offee\n",
-      "5148 =  pie\n"
+      "220 =  \n",
+      "16 = 1\n",
+      "105942 =  marvelous\n",
+      "478 =  N\n",
+      "4402 = asi\n",
+      "64487 =  Lem\n",
+      "422 = ak\n"
      ]
     }
    ],
@@ -77,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "98e3bbd2",
    "metadata": {},
    "outputs": [
@@ -87,7 +107,7 @@
        "' and'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,10 +130,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "83a4b3eb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "API key found and looks good so far!\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "from dotenv import load_dotenv\n",
@@ -141,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "b959be3b",
    "metadata": {},
    "outputs": [],
@@ -161,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "97298fea",
    "metadata": {},
    "outputs": [],
@@ -174,10 +202,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "3475a36d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello Ed! How can I assist you today?'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "response = openai.chat.completions.create(model=\"gpt-4.1-mini\", messages=messages)\n",
     "response.choices[0].message.content"
@@ -193,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "6bce2208",
    "metadata": {},
    "outputs": [],
@@ -206,10 +245,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "404462f5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'I’m sorry, but I don’t know your name. Could you please tell me?'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "response = openai.chat.completions.create(model=\"gpt-4.1-mini\", messages=messages)\n",
     "response.choices[0].message.content"
@@ -231,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "b6d43f92",
    "metadata": {},
    "outputs": [],
@@ -246,10 +296,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "e7ac742c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Your name is Ed! How can I help you today, Ed?'"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "response = openai.chat.completions.create(model=\"gpt-4.1-mini\", messages=messages)\n",
     "response.choices[0].message.content"
@@ -295,7 +356,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
